--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title:
-email:
+email: wrf808@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
 twitter_username:
-github_username:
+github_username: earthquakesound
 
 # Build settings
 markdown: kramdown
